# hacathon

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
config/: default.yaml
docs/: APPROACH.md  DATASET_REPORT.json  DATASET_REPORT.md
scripts/: analyze_dataset.py
src/pii_scanner/: __init__.py  cli.py  config.py  pipeline.py  types.py
src/pii_scanner/classification/: uz_classifier.py
src/pii_scanner/detectors/: base.py  contacts.py  context_scorer.py  direct.py  ner.py  patterns.py  payment.py  personal.py  registry.py  sensitive.py  state_id.py  validators.py
src/pii_scanner/discovery/: dedup.py  router.py  walker.py
src/pii_scanner/extractors/: base.py  csv_ext.py  dispatch.py  doc.py  docx.py  html.py  image.py  json_ext.py  parquet_ext.py  pdf.py  rtf.py  structured_helpers.py  text.py  video.py  xls.py
src/pii_scanner/reporting/: masking.py  writers.py
src/pii_scanner/utils/: logging.py  text_norm.py
tests/: test_classifier.py  test_detectors.py  test_result_csv.py  test_validators.py
