[project]
name = "pii-scanner"
version = "0.1.0"
description = "Автоматическое обнаружение персональных данных в файловых хранилищах (152-ФЗ)"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Hackathon Team" }]
dependencies = [
    "typer>=0.12.0",
    "rich>=13.7.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "pyyaml>=6.0.1",
    "structlog>=24.1.0",
    "xxhash>=3.4.1",
    "jinja2>=3.1.4",
    "tqdm>=4.66.4",
    "setuptools<70.0.0",
    # парсинг
    "pypdf>=4.2.0",
    "pdfplumber>=0.11.0",
    "pdfminer.six>=20240706",
    "python-docx>=1.1.2",
    "striprtf>=0.0.26",
    "openpyxl>=3.1.5",
    "xlrd>=2.0.1",
    "selectolax>=0.3.21",
    "trafilatura>=1.10.0",
    "pandas>=2.2.2",
    "pyarrow>=16.1.0",
    "ijson>=3.3.0",
    "Pillow>=10.3.0",
    "chardet>=5.2.0",
    # NER (опционально, но рекомендуется)
    "natasha>=1.6.0",
]

[project.optional-dependencies]
ocr = [
    "pytesseract>=0.3.10",
    "pdf2image>=1.17.0",
    "opencv-python-headless>=4.10.0.84",
]
ocr-paddle = [
    "paddleocr>=2.8.0",
    "paddlepaddle>=2.6.1",
]
video = [
    "ffmpeg-python>=0.2.0",
]

[project.scripts]
pii-scan = "pii_scanner.cli:app"

[dependency-groups]
dev = [
    "pytest>=8.2.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pii_scanner"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --tb=short"
markers = [
    "unit: лёгкие unit-тесты без I/O",
    "integration: интеграционные тесты",
]
